# space-game

./: .gitignore  CMakeLists.txt  README.md
game/include/: game.h
game/src/: main.cpp
libs/game-core/: CMakeLists.txt
libs/game-core/include/: game-core.h  lib.h
libs/game-core/src/: Animation.cpp  Animation.h  AnimationSystem.cpp  AnimationSystem.h  Asteroid.cpp  Asteroid.h  ChunkCoord.h  ChunkLoader.cpp  ChunkLoader.h  ColliderSystem.cpp  ColliderSystem.h  CompoundCollider.cpp  CompoundCollider.h  Core.cpp  Core.h  Entity.cpp  Entity.h  EntityID.h  GameCamera.cpp  GameCamera.h  InputHandler.cpp  InputHandler.h  Kinematics.cpp  Kinematics.h  KinematicsSystem.cpp  KinematicsSystem.h  RenderSystem.cpp  RenderSystem.h  SaveManager.h  Spaceship.cpp  Spaceship.h  System.h  TextureManager.cpp  TextureManager.h  debug_flags.cpp  debug_flags.h  epa.cpp  epa.h  gjk.cpp  gjk.h
libs/game-core/src/components/: Animation.cpp  Animation.h  CompoundCollider.cpp  CompoundCollider.h  EntityTypes.h  Kinematics.cpp  Kinematics.h  Stats.cpp  Stats.h
libs/game-core/src/core/: AnimationSystem.cpp  AnimationSystem.h  ChunkMapUtil.cpp  ChunkMapUtil.h  ColliderSystem.cpp  ColliderSystem.h  CollisionProcessor.cpp  CollisionProcessor.h  Core.cpp  Core.h  EntityFactory.cpp  EntityFactory.h  EntityID.h  KinematicsSystem.cpp  KinematicsSystem.h  Projectiles.cpp  Projectiles.h  RenderSystem.cpp  RenderSystem.h  StatsSystem.cpp  StatsSystem.h  System.h
libs/game-core/src/delete/: Collision.cpp  Collision.h
libs/game-core/src/input/: InputHandler.cpp  InputHandler.h  InputKeyConsume.cpp  InputKeyConsume.h
libs/game-core/src/physics/: epa.cpp  epa.h  gjk.cpp  gjk.h
libs/game-core/src/utils/: TextureManager.cpp  debug_flags.cpp  debug_flags.h  profiler.hpp
libs/game-core/src/world/: ChunkCoord.h  ChunkLoader.cpp  ChunkLoader.h  GameCamera.cpp  GameCamera.h  SaveManager.cpp  SaveManager.h
